Fix revere button spacing

--- a/web/css/revere.css
+++ b/web/css/revere.css
@@ -134,3 +134,11 @@ strong {
 .field-label {
 	font-weight: bold;
 }
+
+.js-add-source {
+    margin-top: 10px;
+}
+
+.settings-save {
+    margin-top: 10px;
+}
